--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,16 +5,40 @@
 	id="WebApp_ID" version="3.0">
 	<display-name>JQuery File Upload Java Demo</display-name>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+
 	<servlet>
 		<description>A Java example the JQuery file upload component</description>
 		<display-name>JQuery file upload Java Demo Servlet</display-name>
 		<servlet-name>UploadServlet</servlet-name>
 		<servlet-class>nz.net.paulo.UploadServlet</servlet-class>
 	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>UploadServlet</servlet-name>
 		<url-pattern>/UploadServlet</url-pattern>
 	</servlet-mapping>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Protected</web-resource-name>
+			<url-pattern>*.jsp</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>uploader</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+	<security-role>
+		<role-name>uploader</role-name>
+	</security-role>
+
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<form-login-config>
+			<form-login-page>/login.html</form-login-page>
+			<form-error-page>/error.html</form-error-page>
+		</form-login-config>
+	</login-config>
 </web-app>
